refactor(config): getFile inferred from Config.currentContext NamedContext
Signed-off-by: Marc Nuri <marc@marcnuri.com>